--- a/texSources/gazebo.tex
+++ b/texSources/gazebo.tex
@@ -1,9 +1,9 @@
 \section{Gazebo}
 La parte correspondiente al control del robot en el entorno de Gazebo consiste en dos partes, por un lado se leen los diferentes ‘topics’ que envía todo el sistema de visión y por otro se interactúa con el robot en función a estos valores.\\
 \textbf{Abrir/cerrar pinza}
-Según el valor obtenido por el topic relacionado a esta acción (ref secc unirRos) se manda una señal al topic del robot ‘BUSCARNOMBRE’ publicando dos valores diferentes según si se ha de abrir o cerrar.\\
+Según el valor obtenido por el topic relacionado a esta acción (ref secc unirRos) se manda una señal al topic del robot '/parallel_gripper_controller/command'  publicando dos valores diferentes según si se ha de abrir o cerrar.\\
 \textbf{Mover base}
-En función del valor entero recibido del topic correspondiente se codifica según se menciona en el apartado (ref sec unirRos) y se publica en el topic del robot ‘BUSCARRNOMBRE’ uno de los siguientes valores:\\
+En función del valor entero recibido del topic correspondiente se codifica según se menciona en el apartado (ref sec unirRos) y se publica en el topic del robot '/mobile_base_controller/cmd_vel' uno de los siguientes valores:\\
 \begin{enumerate}
   \item Velocidades angulares y lineales = 0
   \item Velocidad angular = 0 y lineal = 1
