--- a/texSources/openpose.tex
+++ b/texSources/openpose.tex
@@ -1,4 +1,10 @@
 \section{OpenPose}
-OpenPose es un sistema de detección de cara, cuerpo, manos y pies en tiempo real mediante diferentes puntos de interés (keypoints), un total de 135 en el caso de la detección completa. Este proyecto sólo se ha centrado en la detección de los keypoints relativos al brazo y mano izquierda mediante las herramientas proporcionadas por Openpose (ref bib openpsoe).
-En la figura imgKeypoints ses puede observar el número total de puntos de interés que es capaz de obtener openpose a partir de una única imagen 2D.\\
+OpenPose es un sistema de detección de cara, cuerpo, manos y pies en tiempo real mediante diferentes puntos de interés (keypoints), un total de 135 en el caso de la detección completa. Este proyecto sólo se ha centrado en la detección de los keypoints relativos al brazo y mano izquierda mediante las herramientas proporcionadas por OpenPose.
+En la figura \ref{fig:imgKeypoints} se puede observar el número total de puntos de interés que es capaz de obtener openpose a partir de una única imagen 2D.\\
+\begin{figure}[hbtp]
+    \centering
+    \includegraphics[scale=0.4]{images/imgKeypoints.png}
+    \caption{\small Número total de keypoints.}
+    \label{fig:imgKeypoints}
+\end{figure}
 
